# mnl

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
include/: glq.hpp  gtq.hpp  mnl.hpp  pnl.hpp  premake5.lua
src/: IO.hpp  Monomials.hpp
tests/: CMakeLists.txt  premake5.lua
tests/src/: Tests.cpp
